cmake_minimum_required(VERSION 3.16)
project(main)
enable_testing()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -fprofile-arcs -ftest-coverage")
add_subdirectory(test)
add_library(main lib.h lib.cpp)
link_libraries(main)
add_executable(lab1.out main main.cpp)
